<resources>
    <string name="app_name">Semana6Fragments</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_principal">Principal</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_musica">Musica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_principal">Fragmentos en Android</string>
    <string name="valrbtmale">Male</string>
    <string name="valrbtfemale">Female</string>
    <string name="valrbtother">Other</string>

    <string name="valchkLicense">Lincense?</string>
    <string name="valchkCar">Car?</string>
    <string name="valbtnsave">SAVE</string>
</resources>