<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistroFragment">

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="275dp"
        android:layout_height="86dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="298dp"
        android:layout_height="159dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <RadioButton
            android:id="@+id/rbtmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtmale" />

        <RadioButton
            android:id="@+id/rbtFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtfemale" />

        <RadioButton
            android:id="@+id/rbtOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtother" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnCountry"
        android:layout_width="214dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender" />

    <CheckBox
        android:id="@+id/chkLicense"
        android:layout_width="111dp"
        android:layout_height="44dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/valchkLicense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry" />

    <CheckBox
        android:id="@+id/chkCar"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/valchkCar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/valbtnsave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkLicense" />
</androidx.constraintlayout.widget.ConstraintLayout>